styles.css
* {
  box-sizing: border-box;
}

html {
  /* sets default font size to 10px */
  font-size: 62.5%;
}

body {
  margin: 0;
  padding: 0;
  font-family: Roboto, sans-serif;
  font-size: 1.2rem;
}

#root {
  position: relative;
  height: 100vh;
  width: 100vw;
}

#map {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  z-index: 0;
}

header {
  width: 30%;
  position: absolute;
  top: 12px;
  left: 12px;
  padding: 12px;
  background: #fff;
  border: 2px solid rgba(0, 0, 0, 0.2);
  border-radius: 5px;
  background-clip: padding-box;
  z-index: 500;
}

header > h1 {
  margin: 0 0 1.2rem 0;
}

details > summary {
  font-size: 1.6rem;
  font-weight: bold;
  cursor: pointer;
}

details p {
  font-size: 1.6rem;
}

details p:last-of-type {
  margin-bottom: 0;
}

/* marker cluster override */
.marker-cluster-small div {
  background-color: #ff8c1a !important;
  opacity: 0.6;
}

@media (max-width: 640px) {
  header {
    top: 0;
    left: 0;
    width: 70%;
    margin: 1rem;
  }

  header > h1 {
    font-size: 1.8rem;
  }

  details p {
    font-size: 1.4rem;
  }
}

a {
  text-decoration: none;
  font-style: italic;
}

a:hover {
  text-decoration: underline;
}

/* custom classes */
.color-passed {
  color: #4dac26;
}

.color-yet-to-pass {
  color: #d01c8b;
}

.color-ocurring {
  color: #1772aa;
}

.color-may-be-ocurring {
  color: #ae5117;
}
/* popup styling */

/* override leaflet's <p> element styles */
.leaflet-popup-content > .popup-container p {
  margin: 0;
  padding: 0;
}

.popup-container {
  padding: 0;
  z-index: 7000;
}

.popup-container p.popup-title {
  padding: 5px 10px;
  border-radius: 10px;
  font-size: 1.5rem;
  background: white;
}

.popup-container p {
  padding-top: 1.2rem;
}

.popup-container > div {
  padding-bottom: 1.2rem;
}

.popup-container > div:last-of-type {
  padding-bottom: 0;
}

/* override leaflet popup styling */
.leaflet-popup-content-wrapper {
  background: transparent;
  box-shadow: none;
}

.leaflet-popup-tip-container {
  position: relative;
  top: 25px;
}

.leaflet-popup-close-button {
  display: none;
}

.popup-container {
  position: absolute;
  background: transparent;
  white-space: nowrap;
}


/* Hide map layers controls on mobile for now, as they get obscured */
@media (max-width: 640px) {
  #root.aemp-popupopen .leaflet-control-attribution {
    display: none;
  }

  .leaflet-control-layers.leaflet-control-layers-expanded.leaflet-control {
    display: none;
  }
}

/* InfoWindow Styling */
#aemp-infowindow-container {
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.aemp-infowindow {
  position: absolute;
  right: 0;
  width: 350px;
  margin: 10px 10px 0 0;
  max-height: 95%;
  overflow-y: auto;
  padding: 15px;
  background: white;
  box-shadow: 0 3px 14px rgba(0, 0, 0, 0.4);
}

.aemp-infowindow p {
  font-size: 1.4rem;
  overflow-wrap: break-word;
  overflow-x: hidden;
}

.aemp-infowindow p.infowindow-title {
  font-size: 1.8rem;
}

a.aemp-infowindow-close {
  display: inline-block;
  float: right;
  font-size: 2.4rem;
  font-style: normal;
  font-weight: bold;
}

@media (max-width: 640px) {
  #root.aemp-popupopen #map {
    height: 50%;
  }

  a.arrow-container {
    padding-top: 0.5rem;
  }

  .aemp-infowindow {
    left: 0;
    bottom: 0;
    margin: 0;
    width: 100%;
    height: 50%;
  }

  .title-content-wrapper {
   
    max-height: 250px;
    overflow-y: auto;
  }
}

